--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "do phong",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.7"
   },
   "devDependencies": {
