--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   badges: ^2.0.3
+  carousel_slider: ^4.1.1
+  dotted_border: ^2.0.0+2
+  file_picker: ^5.0.1
+  cloudinary_public: ^0.11.1
 
 dev_dependencies:
   flutter_test:
